# tree-sitter-veld

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  access_nest_in_if.veld  binding.gyp  binding.pyg  extension.json  file.txt  gen_kind_hl.veld  go.mod  grammar.js  if_clause_errors_dbg.veld  package-lock.json  package.json  pyproject.toml  sample.veld  setup.py  test_empty.veld  test_function_calls.veld  test_lambda.veld  test_method.veld  tree-sitter.json
bindings/c/: tree-sitter-veld.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
examples/: parse.rs
queries/: brackets.scm  folds.scm  highlights.scm  highlights2.scm  indents.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basic.txt  expressions.txt  (+1 more)
test_files/: access_in_lamba_body.veld  array_func_test.veld  basic_multiple_constraints.veld  deep_nesting.veld  edge_cases.veld  fn_lamba_edge_cases.veld  fn_lambda_params.veld  fn_lambda_test.veld  function_types.veld  generic_constraints.veld  generics.veld  import_test.veld  minimal.veld  misc_edge_cases.veld  module_declaration.veld  multiple_constraints.veld  nested_access.veld  problematic_cases.veld  record_test.veld  simple_chains.veld  simple_generic.veld  test_multi_param_generic.veld  type_alias_basic.veld  union_minimal.veld  user_constraint_example.veld  user_exact_cases.veld  user_example.veld  user_fn_lambda.veld  user_nested_example.veld
veld_files/: enum_test.veld  kind_test.veld  pub_test.veld  result.veld
(+5 files in other folders)
