[package]
name = "tree-sitter-veld"
description = "A tree-sitter parser for the Veld programming language"
version = "0.1.0"
authors = ["Perry <aidanpj18@gmail.com>"]
license = "Apache2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "veld"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/apconduct/veld"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
